<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:theme="@style/AppTheme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fandradetecinfo.com.meupeso.Views.UsuarioActivity"
    tools:showIn="@layout/activity_usuario">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewUsuario" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
			tools:ignore="ScrollViewSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

		    <EditText
				android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:ems="10"
		        android:id="@+id/txtUsrNome"
		        android:hint="@string/nome"
				android:maxLines="1" />

		    <Spinner
				android:id="@+id/spnUsrSexo"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_below="@+id/txtUsrNome"
		        android:entries="@array/list_sexo" />

		    <EditText
				android:id="@+id/txtUsrAltura"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/spnUsrSexo"
		        android:ems="10"
		        android:hint="@string/altura"
		        android:inputType="numberDecimal"

				android:maxLines="1" />

		    <EditText
				android:id="@+id/txtUsrData"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/txtUsrAltura"

		        android:ems="10"
		        android:hint="@string/data_de_nascimento"
		        android:inputType="date" />
	
            </RelativeLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>
